--- a/src/app/web_interface/web/index.html
+++ b/src/app/web_interface/web/index.html
@@ -15,8 +15,7 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <base href="$FLUTTER_BASE_HREF">
-  <h1>ACMEIR</h1>
-  <meta flt-viewport="" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
+  <h1>ACME Package Registry</h1>
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
