--- a/src/app/web_interface/web/index.html
+++ b/src/app/web_interface/web/index.html
@@ -15,7 +15,7 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <base href="$FLUTTER_BASE_HREF">
-  <h1>ACME Package Registry</h1>
+  <h1>Loading ACME Package Registry...</h1>
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
